tests/typing/bad/testfile-duplicate-3.go
package main

func foo() int { var x,x int; return x }
func main() {}
